[package]
name = "blink-stick"
version = "0.1.0"
authors = ["Nicolai Mainiero <nicolai@mainiero.de>"]
edition = "2018"
license = "MIT"
description = "Rust API Implementations for BlinkSticks smart LED controllers with integrated USB firmware. (https://www.blinkstick.com/)"
repository = "https://github.com/nicolaimainiero/blink-stick"
homepage = "https://github.com/nicolaimainiero/blink-stick"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.1.0"